--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/Essam-Harrous/Memer#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cloudinary": "^1.21.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-graphql": "^0.9.0",
     "express-jwt": "^5.3.3",
-    "graphql": "^15.0.0",
+    "graphql": "^14.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   }
