adding template, create meme and showing memes

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,9 +13,11 @@
     "graphql": "^15.0.0",
     "graphql-request": "^1.8.2",
     "jquery": "^3.5.0",
+    "lodash": "^4.17.15",
     "mdbreact": "^4.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
