--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,10 +15,12 @@
     "jquery": "^3.5.0",
     "lodash": "^4.17.15",
     "mdbreact": "^4.26.0",
+    "placeholder-loading": "^0.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
