--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "express-graphql": "^0.9.0",
     "express-jwt": "^5.3.3",
     "graphql": "^14.4.1",
+    "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   }
