--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "start": "run-p start:**",
     "start:app": "react-scripts start",
     "start:lambda": "netlify-lambda serve --config ./config/webpack.functions.js src/lambda",
-    "build": "react-scripts build",
+    "build": "run-p build:**",
     "build:app": "react-scripts build",
     "build:lambda": "netlify-lambda build --config ./config/webpack.functions.js src/lambda",
     "test": "react-scripts test",
