--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ TOKEN_SECRET_VALUE=esso esso esoo
 CLOUD_NAME=essam
 API_KEY=137987238286318
 API_SECRET=rGTNSSA1d6qBdbgVfphPaHj3nPc
+DB_URL=mongodb+srv://essam:1234@test1-jvuqg.mongodb.net/test?retryWrites=true&w=majority
