modifying the to as serverless with netlify lambda function

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ CLOUD_NAME=essam
 API_KEY=137987238286318
 API_SECRET=rGTNSSA1d6qBdbgVfphPaHj3nPc
 DB_URL=mongodb+srv://essam:1234@test1-jvuqg.mongodb.net/test?retryWrites=true&w=majority
+REACT_APP_SERVER_URL=http://localhost:9000/.netlify/functions/api/graphql
