(fix) mongo password

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ TOKEN_SECRET_VALUE=esso esso esoo
 CLOUD_NAME=essam
 API_KEY=137987238286318
 API_SECRET=rGTNSSA1d6qBdbgVfphPaHj3nPc
-DB_URL=mongodb+srv://essam:1234@test1-jvuqg.mongodb.net/test?retryWrites=true&w=majority
+DB_URL=mongodb+srv://essam:TeikgbYI1Nj5oj01@test1-jvuqg.mongodb.net/test?retryWrites=true&w=majority
 REACT_APP_SERVER_URL=http://localhost:9000/.netlify/functions/api/graphql
